@@ -1,3 +1,10 @@
+2005-12-27  Sven Panne  <sven.panne@aedion.de>
+
+	* src/arch/alsa/alsa.c: Always use "_near" variants of
+	snd_pcm_hw_params_set_period_size and snd_pcm_hw_params_set_rate, this
+	should fix problems for some soundcards (thanks to Shawn Kirst for
+	pointing this out). Removed some unused variables. Fixed two warnings.
+
 2005-12-21  Prakash Punnoor <prakash@punnoor.de>
 
 	* arch/i386/Makefile.am: added; kludge for autotools vs. nasm
